--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <version>18.0</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.esotericsoftware</groupId>-->
+            <!--<artifactId>kryo</artifactId>-->
+            <!--<version>3.0.3</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
 
