--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,23 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.4</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
                 <executions>
                     <execution>
                         <phase>install</phase>
@@ -31,34 +41,26 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-enforcer-plugin</artifactId>-->
-                <!--<version>1.4</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>enforce-plugin-versions</id>-->
-                        <!--<goals>-->
-                            <!--<goal>enforce</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<rules>-->
-                                <!--<requirePluginVersions>-->
-                                    <!--&lt;!&ndash;<banLatest>true</banLatest>&ndash;&gt;-->
-                                    <!--&lt;!&ndash;<banRelease>true</banRelease>&ndash;&gt;-->
-                                    <!--<banSnapshots>true</banSnapshots>-->
-                                    <!--<phases>clean,deploy,site</phases>-->
-                                    <!--<additionalPlugins>-->
-                                        <!--<additionalPlugin>org.apache.maven.plugins:maven-eclipse-plugin</additionalPlugin>-->
-                                        <!--<additionalPlugin>org.apache.maven.plugins:maven-reactor-plugin</additionalPlugin>-->
-                                    <!--</additionalPlugins>-->
-                                    <!--<unCheckedPluginList>org.apache.maven.plugins:maven-enforcer-plugin,org.apache.maven.plugins:maven-idea-plugin</unCheckedPluginList>-->
-                                <!--</requirePluginVersions>-->
-                            <!--</rules>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.0</version>
+                <configuration>
+                    <rules>
+                        <banDuplicateClasses>
+                            <findAllDuplicates>true</findAllDuplicates>
+                        </banDuplicateClasses>
+                    </rules>
+                    <fail>true</fail>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>extra-enforcer-rules</artifactId>
+                        <version>1.0-beta-3</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -129,10 +131,16 @@
             <version>18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>extra-enforcer-rules</artifactId>
+            <version>1.0-beta-2</version>
+        </dependency>
+
         <!--<dependency>-->
-            <!--<groupId>com.esotericsoftware</groupId>-->
-            <!--<artifactId>kryo</artifactId>-->
-            <!--<version>3.0.3</version>-->
+        <!--<groupId>com.esotericsoftware</groupId>-->
+        <!--<artifactId>kryo</artifactId>-->
+        <!--<version>3.0.3</version>-->
         <!--</dependency>-->
 
 
