--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,75 @@
     <groupId>org.tinkerrocks</groupId>
     <artifactId>tinker-rocks</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.2</version>
+                        <executions>
+                            <execution>
+                                <id>rocksdb-install</id>
+                                <phase>clean</phase>
+                                <configuration>
+                                    <file>${project.basedir}/lib/rocksdbjni-3.13.0-osx.jar</file>
+                                    <repositoryLayout>default</repositoryLayout>
+                                    <groupId>org.rocksdb</groupId>
+                                    <artifactId>rocksdbjni</artifactId>
+                                    <version>3.13.0</version>
+                                    <packaging>jar</packaging>
+                                    <generatePom>true</generatePom>
+                                </configuration>
+                                <goals>
+                                    <goal>install-file</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.rocksdb</groupId>
+                    <artifactId>rocksdbjni</artifactId>
+                    <version>3.13.0</version>
+                </dependency>
+            </dependencies>
+
+        </profile>
+
+
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.rocksdb</groupId>
+                    <artifactId>rocksdbjni</artifactId>
+                    <version>3.10.1</version>
+                </dependency>
+            </dependencies>
+
+        </profile>
+
+
+    </profiles>
+
+
     <build>
         <plugins>
             <plugin>
@@ -82,13 +151,17 @@
                 </executions>
             </plugin>
 
+
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
             </plugin>
 
         </plugins>
+
+
     </build>
+
 
     <dependencies>
         <dependency>
@@ -98,10 +171,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.rocksdb</groupId>
-            <artifactId>rocksdbjni</artifactId>
-            <version>3.10.1</version>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.1.7</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.tinkerpop</groupId>
             <artifactId>gremlin-test</artifactId>
