--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,56 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.2</version>
+                        <executions>
+                            <execution>
+                                <id>rocksdb-install</id>
+                                <phase>clean</phase>
+                                <configuration>
+                                    <file>${project.basedir}/lib/rocksdbjni-3.11.2-osx.jar</file>
+                                    <repositoryLayout>default</repositoryLayout>
+                                    <groupId>org.rocksdb</groupId>
+                                    <artifactId>rocksdbjni</artifactId>
+                                    <version>3.11.2</version>
+                                    <packaging>jar</packaging>
+                                    <generatePom>true</generatePom>
+                                </configuration>
+                                <goals>
+                                    <goal>install-file</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.rocksdb</groupId>
+                    <artifactId>rocksdbjni</artifactId>
+                    <version>3.11.2</version>
+                </dependency>
+            </dependencies>
+
+        </profile>
+
+
+    </profiles>
+
+
     <build>
         <plugins>
             <plugin>
