--- a/pom.xml
+++ b/pom.xml
@@ -195,11 +195,11 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.rocksdb</groupId>
-            <artifactId>rocksdbjni</artifactId>
-            <version>3.10.1</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.rocksdb</groupId>-->
+        <!--<artifactId>rocksdbjni</artifactId>-->
+        <!--<version>3.10.1</version>-->
+        <!--</dependency>-->
 
         <!--<dependency>-->
         <!--<groupId>com.esotericsoftware</groupId>-->
