--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,25 @@
         </profile>
 
 
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                </os>
+            </activation>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.rocksdb</groupId>
+                    <artifactId>rocksdbjni</artifactId>
+                    <version>3.10.1</version>
+                </dependency>
+            </dependencies>
+
+        </profile>
+
+
     </profiles>
 
 
@@ -205,20 +224,6 @@
             <artifactId>protobuf-java-format</artifactId>
             <version>1.2</version>
         </dependency>
-
-
-        <dependency>
-            <groupId>org.rocksdb</groupId>
-            <artifactId>rocksdbjni</artifactId>
-            <version>3.10.1</version>
-        </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>com.esotericsoftware</groupId>-->
-        <!--<artifactId>kryo</artifactId>-->
-        <!--<version>3.0.3</version>-->
-        <!--</dependency>-->
-
 
     </dependencies>
 
