--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,21 @@
             <version>1.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.10.4</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.10.4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
