--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.3.2.v20150730</version>
+        </dependency>
+
+
     </dependencies>
 
 
