--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>gremlin-groovy-test</artifactId>
+            <version>3.0.0-incubating</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
             <artifactId>gremlin-groovy</artifactId>
             <version>3.0.0.M9-incubating</version>
             <scope>provided</scope>
