--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
                             </execution>
                         </executions>
                     </plugin>
+
+
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.9</version>
+                        <configuration>
+                            <reuseForks>false</reuseForks>
+                        </configuration>
+                    </plugin>
+
                 </plugins>
             </build>
 
