--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,13 @@
 
 
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.9</version>
                         <configuration>
                             <reuseForks>false</reuseForks>
+                            <argLine>-server -d64</argLine>
+
                         </configuration>
                     </plugin>
 
