--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
                     <groupId>org.rocksdb</groupId>
                     <artifactId>rocksdbjni</artifactId>
                     <version>3.13.1</version>
+                    <scope>provided</scope>
                 </dependency>
             </dependencies>
 
