--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,7 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
